--- a/.github/workflows/react.yaml
+++ b/.github/workflows/react.yaml
@@ -26,3 +26,4 @@ jobs:
         cache: 'npm'
     - run: npm i
     - run: npm run build --if-present
+    - run: /home/user/actions-runner/_work/react_deploy/react_deploy/build/* /var/www/react-app
