--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
+    "nanoid": "^5.0.9",
     "react": "^18.2.0",
+    "react-confetti": "^6.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
